--- a/frontend/src/app/message/message.component.html
+++ b/frontend/src/app/message/message.component.html
@@ -1,3 +1,10 @@
-<p>
-  message works!
-</p>
+<a *ngFor="let content of contents" class="dropdown-item d-flex align-items-center" href="#">
+  <div class="dropdown-list-image mr-3">
+    <img class="rounded-circle" src="/assets/img/img60x60.jpg" alt="">
+    <div class="status-indicator bg-success"></div>
+  </div>
+  <div class="font-weight-bold">
+    <div class="text-truncate">Hi there! I am wondering if you can help me with a problem I've been having.</div>
+    <div class="small text-gray-500">Emily Fowler · 58m</div>
+  </div>
+</a>
