--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -12,3 +12,9 @@
 .rating-star-full {
   color: gold;
 }
+
+.btn-next-page {
+  @extend .btn;
+  @extend .btn-outline-secondary;
+  @extend .btn-block;
+}
