--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -31,6 +31,10 @@
   flex: 1 0 auto;
 }
 
+#content {
+  min-height: 90vh;
+}
+
 // Used for sidebar action
 .overlay {
   display: none;
@@ -40,7 +44,7 @@
   background: rgba(0, 0, 0, 0.7);
   z-index: 998;
   opacity: 0;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .overlay.active {
