--- a/frontend/src/app/reputation/reputation.component.html
+++ b/frontend/src/app/reputation/reputation.component.html
@@ -1,24 +1,27 @@
 
-<div class="container-fluid p-1">
+<div class="reputation">
 
-  <div *ngIf="isRated()" class="align-middle">
-    <span>Average</span>
-    <ngb-rating [rate]="getRated()" [readonly]="true">
-      <ng-template let-fill="fill">
-        <span class="rating-star" [class.rating-star-full]="fill === 100">
-          <span class="rating-star-half" [style.width.%]="fill">&#9733;</span>&#9733;
-        </span>
-      </ng-template>
-    </ngb-rating>
-    <span>{{getRated()}}</span>
-    <span>voted: {{reputation.reputed}}</span>
-  </div>
+  <ngb-rating *ngIf="isRated()" class="uniform" [rate]="getRated()" [readonly]="true">
+    <ng-template let-fill="fill">
+      <span class="rating-star" [class.rating-star-full]="fill === 100">
+        <span class="rating-star-half" [style.width.%]="fill">&#9733;</span>&#9733;
+      </span>
+    </ng-template>
+  </ngb-rating>
 
+  <span *ngIf="isRated()" class="uniform"> {{toNumberal(reputation.reputed)}} voters </span>
+
+  <button type="button" class="btn-like uniform" (click)="onRepute(idCid, 'liked')" value="liked">
+    <i class="far fa-thumbs-up"></i><span> {{toNumberal(reputation.liked)}}</span>
+  </button>
+
+  <!--
   <div class="btn-group btn-group-toggle" ngbRadioGroup name="radioBasic">
     <label ngbButtonLabel class="btn-rating-number">
       <input ngbButton type="radio" (click)="onRepute(idCid, 'liked')" value="liked">
       <i class="far fa-thumbs-up"></i><span>{{reputation.liked}}</span>
     </label>
+
     <label ngbButtonLabel class="btn-rating-number">
       <input ngbButton type="radio" (click)="onRepute(idCid, 'disliked')" value="disliked">
       <i class="far fa-thumbs-down"></i>{{reputation.disliked}}
@@ -28,6 +31,7 @@
       <i class="fas fa-biohazard"></i>{{reputation.reported}}
     </label>
   </div>
+  -->
 
 </div>
 
