--- a/frontend/src/app/reputation/reputation.component.scss
+++ b/frontend/src/app/reputation/reputation.component.scss
@@ -1,5 +1,12 @@
-@import "node_modules/bootstrap/scss/bootstrap.scss";
 @import "src/styles.scss";
+
+.reputation {
+  @extend .container;
+  @extend .p-0;
+  @extend .row;
+  @extend .no-gutters;
+  width: 100%;
+}
 
 .rating-star-half {
   position: absolute;
@@ -12,4 +19,16 @@
   @extend .btn;
   @extend .btn-light;
   @extend .py-0;
+}
+
+.btn-like {
+  @extend .btn;
+  @extend .btn-outline-primary;
+  @extend .btn-sm;
+  @extend .border-0;
+}
+
+.uniform {
+  @extend .col;
+  @extend .align-self-center;
 }
