--- a/frontend/src/app/notification/notification.component.scss
+++ b/frontend/src/app/notification/notification.component.scss
@@ -1,6 +1,9 @@
-@import "node_modules/bootstrap/scss/bootstrap.scss";
 @import "src/styles.scss";
 
 .noti {
-    @extend .my-1;
+  @extend .m-1;
+}
+
+ngb-alert {
+  @extend .m-0;
 }
