message sending functionalities & clean up.

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,18 +1,5 @@
 @import "src/styles.scss";
 
-.scroll-to-top {
-  position: fixed;
-  right: 1rem;
-  bottom: 1rem;
-  display: none;
-  width: 2.75rem;
-  height: 2.75rem;
-  text-align: center;
-  color: #fff;
-  background: rgba(90, 92, 105, 0.5);
-  line-height: 46px;
-}
-
 #wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -33,6 +20,20 @@
 
 #content {
   min-height: 90vh;
+}
+
+.scroll-to-top {
+  @extend .rounded;
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  display: none;
+  width: 2.75rem;
+  height: 2.75rem;
+  text-align: center;
+  color: #fff;
+  background: rgba(90, 92, 105, 0.5);
+  line-height: 46px;
 }
 
 // Used for sidebar action
