--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- Page Wrapper -->
 <div id="wrapper">
 
+  <app-modals></app-modals>
+
   <app-sidebar></app-sidebar>
 
   <!-- Content Wrapper -->
@@ -26,7 +28,7 @@
   <!-- End of Content Wrapper -->
 
   <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
+  <a class="scroll-to-top" href="#wrapper">
     <i class="fas fa-angle-up"></i>
   </a>
 
