--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user" class="container">
+<div *ngIf="user">
 
   <ngb-tabset justify="justified">
     <ngb-tab title="Basic">
@@ -84,4 +84,4 @@
 
   </ngb-tabset>
 
-</div><!-- *ngIf="user" class="container" -->
+</div><!-- *ngIf="user" -->
