--- a/frontend/src/app/user-ref/user-ref.component.html
+++ b/frontend/src/app/user-ref/user-ref.component.html
@@ -2,11 +2,9 @@
   <img class="icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
     src="{{imgServerUrl + userRefId}}" onError="this.src='/assets/img/img60x60.jpg';">
   <div class="dropdown-menu">
-    <a class="dropdown-item" routerLink="/user/profile/{{userRefId}}">Show Profile</a>
-    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" routerLink="/user/profile/{{userRefId}}">Profile</a>
     <a *ngIf="!isFollowee" class="dropdown-item" (click)="postRelation(true)">Follow</a>
     <a *ngIf="isFollowee" class="dropdown-item" (click)="postRelation(false)">Unfollow</a>
     <a class="dropdown-item" (click)="sendMessage()">Send Message</a>
-    <a class="dropdown-item">Report</a>
   </div><!-- class="btn-group dropright"> -->
 </div>
