--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -1,6 +1,17 @@
-<div *ngIf="content">
-  <textarea [(ngModel)]="content.title" [ngClass]="'title'+ styleSuffix()"
+<div *ngIf="content" class="content">
+  <textarea [(ngModel)]="content.title" [ngClass]="'title'+ suffixReadonly()"
       placeholder="Please type a title here."></textarea>
+
+
+  <div class="border rounded m-2 p-1 row no-gutters align-items-center" >
+    <div class="col-2">
+      <app-user-ref [userRefId]="content.authorId" [userRefName]="content.authorName"></app-user-ref>
+    </div>
+    <div class="col pl-2">
+      <span>{{content.authorName}}</span>
+      <p class="m-0"><small class="text-muted">{{content.cruTime.created.toLocalDate()}}</small></p>
+    </div>
+  </div>
 
   <div class="container">
     <div class="table-responsive-sm">
@@ -11,33 +22,43 @@
         <tbody>
           <tr>
             <td><input type="text" [(ngModel)]="content.extend.prepTime"
-                [ngClass]="'inputTable'+ styleSuffix()" placeholder="10m30s"></td>
+                [ngClass]="'input-table'+ suffixReadonly()" placeholder="10m30s"></td>
             <td><input type="text" [(ngModel)]="content.extend.cookTime"
-                [ngClass]="'inputTable'+ styleSuffix()" placeholder="1h"></td>
+                [ngClass]="'input-table'+ suffixReadonly()" placeholder="1h"></td>
             <td><input type="text" [(ngModel)]="content.extend.servings"
-                [ngClass]="'inputTable'+ styleSuffix()" placeholder="1"></td>
+                [ngClass]="'input-table'+ suffixReadonly()" placeholder="1"></td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
 
+  <div class="border rounded my-1 p-1">
   <label for="ingredients">Ingredients:</label>
-  <textarea id="ingredients" [(ngModel)]="flatIngredients" [ngClass]="'ingredients'+ styleSuffix()"
+  <textarea id="ingredients" [(ngModel)]="flatIngredients" [ngClass]="'ingredients'+ suffixReadonly()"
       placeholder="Please type ingredients in separated lines. For examples 6 ounces mozzarella cheese, shredded."></textarea>
+  </div>
 
-  <label for="directions">Directions:</label>
-  <div id="directions"></div>
+  <div class="border rounded my-1 p-1">
+    <label for="directions">Directions:</label>
+    <div id="directions" class="border rounded my-1 p-1"></div>
+  </div>
 
-  <button type="button" (click)="onSave()" class="btn btn-outline-secondary">
-    Save
-  </button>
-  <button type="button" (click)="onDelete()" class="btn btn-outline-secondary">
-    Delete
-  </button>
+  <div *ngIf="isReadonly" class="border rounded my-1 p-1">
+    <app-reputation [model]="model" [idCid]="idCid" [reputation]="content.reputation"></app-reputation>
+  </div>
 
-  <app-reputation [model]="model" [idCid]="idCid" [reputation]="content.reputation"></app-reputation>
+  <div *ngIf="!isReadonly" class="border rounded my-1 p-1">
+    <button type="button" (click)="onSave()" class="btn btn-outline-secondary">
+      Save
+    </button>
+    <button type="button" (click)="onDelete()" class="btn btn-outline-secondary">
+      Delete
+    </button>
+  </div>
 
-  <app-review [content]="content"></app-review>
+</div> <!-- *ngIf="content" class="content" -->
 
+<div *ngIf="isReadonly">
+  <app-review *ngIf="content" [content]="content"></app-review>
 </div>
