--- a/frontend/src/app/content/content.component.scss
+++ b/frontend/src/app/content/content.component.scss
@@ -1,9 +1,15 @@
 @import "src/styles.scss";
 
-.titleReadonly {
-    @extend .form-control-plaintext;
-    @extend .h4;
-    pointer-events: none;
+.content {
+    @extend .border;
+    @extend .rounded;
+    @extend .p-1;
+    @extend .mb-2;
+}
+
+.author {
+    @extend .border;
+    @extend .rounded;
 }
 
 .title {
@@ -11,26 +17,29 @@
     @extend .h4;
 }
 
-.inputTableReadonly {
-    text-align: center;
-    @extend .form-control-sm;
-    @extend .form-control-plaintext;
+.title-readonly {
+    @extend .title;
     pointer-events: none;
 }
 
-.inputTable {
+.input-table {
     text-align: center;
     @extend .form-control-sm;
     @extend .form-control;
 }
 
-.ingredientsReadonly {
-    @extend .form-control-plaintext;
+.input-table-readonly {
+    @extend .input-table;
     pointer-events: none;
 }
 
 .ingredients {
     @extend .form-control;
+}
+
+.ingredients-readonly {
+    @extend .ingredients;
+    pointer-events: none;
 }
 
 label {
