--- a/frontend/src/app/search-content/search-content.component.html
+++ b/frontend/src/app/search-content/search-content.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <a *ngFor="let content of contents" class="col-sm-3"
+  <a *ngFor="let content of contents" class="content"
       routerLink="/content/{{content.idCid.identity}}/{{content.idCid.containerId}}">
     <div>
       <div class="card">
-        <img class="card-img-top" [src]="imgServerUrl + content.fileRefs[0].uri" alt="Card image cap">
+        <img *ngIf="content.fileRefs" class="card-img-top" [src]="imgServerUrl + content.fileRefs[0].uri" alt="Card image cap">
         <div class="card-body">
           <span class="card-text">{{content.title}}</span>
         </div>
