refactoring and working on authentication

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="login p-4">
+<div class="shadow p-4">
   <h2 class="text-center mb-3">Sign in</h2>
   <div class="text-center">
-      <a href="./login/facebook" class="btn btn-primary btn-block"><i class="fab fa-facebook"></i> Sign in with <b>Facebook</b></a>
+      <a href="http://localhost:9093/uaa/login/facebook" class="btn btn-primary btn-block"><i class="fab fa-facebook"></i> Sign in with <b>Facebook</b></a>
       <a href="./login/google" class="btn btn-danger btn-block"><i class="fab fa-google"></i> Sign in with <b>Google</b></a>
   </div>
 
@@ -27,9 +27,12 @@
 
   <button type="submit" class="btn btn-success btn-block">Sign in</button>
 
-  <div class="row justify-content-around">
+  <div class="d-flex justify-content-around">
     <label><input type="checkbox"> Remember me</label>
     <a href="#" class="text-success">Forgot Password?</a>
   </div>
-  <div class="hint-text small">Don't have an account? <a href="#" class="text-success">Register Now!</a></div>
+</div> <!-- class="shadow p-4" -->
+
+<div class="d-flex justify-content-center mt-2">
+<div class="hint-text small">Don't have an account? <a href="#" class="text-success">Register Now!</a></div>
 </div>
