--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -7,32 +7,50 @@
 
   <hr class="my-4"/>
 
-  <div class="input-group">
-    <div class="input-group-prepend">
-      <span class="input-group-text">
-        <i class="fas fa-user"></i>
-      </span>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">
+            <i class="fas fa-user"></i>
+          </span>
+        </div>
+        <input type="text" class="form-control" placeholder="Username" formControlName="username"
+            [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+          <div *ngIf="f.username.errors.required">Username is required</div>
+        </div>
+      </div>
     </div>
-    <input type="text" class="form-control" placeholder="Username">
-  </div>
 
-  <div class="input-group">
-    <div class="input-group-prepend">
-      <span class="input-group-text">
-        <i class="fas fa-key"></i>
-      </span>
+    <div class="form-group">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">
+            <i class="fas fa-key"></i>
+          </span>
+        </div>
+        <input type="password" class="form-control" placeholder="Password" formControlName="password"
+            [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+          <div *ngIf="f.password.errors.required">Password is required</div>
+        </div>
+      </div>
     </div>
-    <input type="password" class="form-control" placeholder="Password">
-  </div>
 
-  <button type="submit" class="btn btn-success btn-block">Sign in</button>
+    <div class="form-group">
+      <button type="submit" [disabled]="loading" class="btn btn-success btn-block">Sign in</button>
+    </div>
+
+    <div *ngIf="error" class="alert alert-danger">Incorrect username or password</div>
+  </form>
 
   <div class="d-flex justify-content-around">
     <label><input type="checkbox"> Remember me</label>
     <a href="#" class="text-success">Forgot Password?</a>
   </div>
-</div> <!-- class="shadow p-4" -->
+</div> 
 
 <div class="d-flex justify-content-center mt-2">
-<div class="hint-text small">Don't have an account? <a href="#" class="text-success">Register Now!</a></div>
+  <div class="hint-text small">Don't have an account? <a href="#" class="text-success">Register Now!</a></div>
 </div>
