--- a/frontend/src/app/modals/modals.component.html
+++ b/frontend/src/app/modals/modals.component.html
@@ -10,7 +10,7 @@
     <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
     <div class="modal-footer">
         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="login.html">Logout</a>
+        <button class="btn btn-primary" type="button"  data-dismiss="modal" (click)="logout()">Logout</button>
     </div>
     </div>
   </div>
