--- a/frontend/src/app/sign-up/sign-up.component.html
+++ b/frontend/src/app/sign-up/sign-up.component.html
@@ -46,7 +46,8 @@
         <input type="password" class="form-control" placeholder="Password" formControlName="password"
             [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-          <div *ngIf="f.username.errors.tooShort">Password is at least 8 character</div>
+          <div *ngIf="f.password.errors.required">Password is required</div>
+          <div *ngIf="f.password.errors.tooShort">Password is at least 8 character</div>
           <div *ngIf="f.password.errors.invalidCharacter">Password contains invalid characters</div>
         </div>
       </div>
@@ -70,9 +71,12 @@
 
     <div class="form-group">
       <label class="checkbox-inline">
-        <input type="checkbox" required="required">
+        <input type="checkbox" formControlName="accept" required>
         I accept the <a routerLink="#" class="text-primary">Terms of Use</a>
         &amp; <a routerLink="#" class="text-primary">Privacy Policy</a>
+        <div *ngIf="signUpForm.hasError('required', 'accept')" >
+          <i class="text-danger">Acceptance is required</i>
+        </div>
       </label>
     </div>
 
@@ -80,55 +84,10 @@
       <button type="submit" [disabled]="loading" class="btn btn-success btn-block">Sign Up</button>
     </div>
 
-    <div *ngIf="error" class="alert alert-danger">Incorrect username or password</div>
+    <div *ngIf="error" class="alert alert-danger">The username already exists. Please use a different username</div>
   </form>
 </div>
 
 <div class="d-flex justify-content-center mt-2">
   <div class="hint-text">Already have an account? <a routerLink="/signin" class="text-success">Sign in here</a></div>
 </div>
-
-
-<!--
-<div class="signup-form">
-  <form action="/examples/actions/confirmation.php" method="post">
-  <h2>Sign Up</h2>
-  <p>Please fill in this form to create an account!</p>
-  <hr>
-      <div class="form-group">
-    <div class="input-group">
-      <span class="input-group-addon"><i class="fa fa-user"></i></span>
-      <input type="text" class="form-control" name="username" placeholder="Username" required="required">
-    </div>
-      </div>
-      <div class="form-group">
-    <div class="input-group">
-      <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
-      <input type="email" class="form-control" name="email" placeholder="Email Address" required="required">
-    </div>
-      </div>
-  <div class="form-group">
-    <div class="input-group">
-      <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-      <input type="text" class="form-control" name="password" placeholder="Password" required="required">
-    </div>
-      </div>
-  <div class="form-group">
-    <div class="input-group">
-      <span class="input-group-addon">
-        <i class="fa fa-lock"></i>
-        <i class="fa fa-check"></i>
-      </span>
-      <input type="text" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
-    </div>
-      </div>
-      <div class="form-group">
-    <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-  </div>
-  <div class="form-group">
-          <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
-      </div>
-  </form>
-<div class="text-center">Already have an account? <a href="#">Login here</a></div>
-</div>
--->
