--- a/frontend/src/app/modals/modals.component.html
+++ b/frontend/src/app/modals/modals.component.html
@@ -1,18 +1,18 @@
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="logoutModalLabel" aria-hidden="true">
+<div class="modal fade" id="signOutModal" tabindex="-1" role="dialog" aria-labelledby="signOutModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
     <div class="modal-header">
-        <h5 class="modal-title" id="logoutModalLabel">Ready to Leave?</h5>
+        <h5 class="modal-title" id="signOutModalLabel">Ready to Leave?</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">×</span>
         </button>
     </div>
-    <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+    <div class="modal-body">Select "Sign Out" below if you are ready to end your current session.</div>
     <div class="modal-footer">
         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <button class="btn btn-primary" type="button"  data-dismiss="modal" (click)="logout()">Logout</button>
+        <button class="btn btn-primary" type="button"  data-dismiss="modal" (click)="signOut()">Sign Out</button>
     </div>
     </div>
   </div>
-</div> <!-- class="modal fade" id="logoutModal" ... -->
+</div> <!-- class="modal fade" id="signOutModal" ... -->
 
