--- a/frontend/src/app/sign-up/sign-up.component.html
+++ b/frontend/src/app/sign-up/sign-up.component.html
@@ -14,8 +14,9 @@
         <input type="text" class="form-control" placeholder="Username" formControlName="username"
             [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
         <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-          <div *ngIf="f.username.errors.required">Username is required</div>
-          <div *ngIf="f.username.errors.tooShort">Username is at least 8 character</div>
+          <div *ngIf="f.username.errors.required">Username is required.</div>
+          <div *ngIf="f.username.errors.tooShort">Username should be at least 6 characters.</div>
+          <div *ngIf="f.username.errors.mustNotContain">Username cannot contain {{'{ or }'}} character.</div>
         </div>
       </div>
     </div>
@@ -30,8 +31,9 @@
         <input type="text" class="form-control" placeholder="Email@email.net" formControlName="email"
             [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-          <div *ngIf="f.email.errors.required">Email is required</div>
-          <div *ngIf="f.email.errors.mustContain">Email must have @ character</div>
+          <div *ngIf="f.email.errors.required">Email is required.</div>
+          <div *ngIf="f.email.errors.tooShort">Email should be at least 5 characters.</div>
+          <div *ngIf="f.email.errors.mustContain">Email must have @ character.</div>
         </div>
       </div>
     </div>
@@ -46,9 +48,9 @@
         <input type="password" class="form-control" placeholder="Password" formControlName="password"
             [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-          <div *ngIf="f.password.errors.required">Password is required</div>
-          <div *ngIf="f.password.errors.tooShort">Password is at least 8 character</div>
-          <div *ngIf="f.password.errors.invalidCharacter">Password contains invalid characters</div>
+          <div *ngIf="f.password.errors.required">Password is required.</div>
+          <div *ngIf="f.password.errors.mustContain">Password must have at least 8 characters with at least one capital letter, at least one lower case letter and at least one number.</div>
+          <div *ngIf="f.password.errors.mustNotContain">Password cannot contain {{'{ or }'}} character.</div>
         </div>
       </div>
     </div>
@@ -63,8 +65,8 @@
         <input type="password" class="form-control" placeholder="Confirm Password" formControlName="confirm"
             [ngClass]="{ 'is-invalid': submitted && f.confirm.errors }">
         <div *ngIf="submitted && f.confirm.errors" class="invalid-feedback">
-          <div *ngIf="f.confirm.errors.required">Confirm is required</div>
-          <div *ngIf="f.confirm.errors.notSame">Password confirmation fails</div>
+          <div *ngIf="f.confirm.errors.required">Confirm is required.</div>
+          <div *ngIf="f.confirm.errors.notSame">Password confirmation fails.</div>
         </div>
       </div>
     </div>
@@ -74,8 +76,10 @@
         <input type="checkbox" formControlName="accept" required>
         I accept the <a routerLink="#" class="text-primary">Terms of Use</a>
         &amp; <a routerLink="#" class="text-primary">Privacy Policy</a>
-        <div *ngIf="signUpForm.hasError('required', 'accept')" >
-          <i class="text-danger">Acceptance is required</i>
+        <div *ngIf="submitted">
+          <div *ngIf="signUpForm.hasError('required', 'accept')" >
+            <span class="text-danger small">Acceptance is required</span>
+          </div>
         </div>
       </label>
     </div>
