--- a/frontend/src/app/topbar/topbar.component.html
+++ b/frontend/src/app/topbar/topbar.component.html
@@ -110,7 +110,7 @@
             <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
             Sign Up
           </a>
-          <a *ngIf="!isGuest(user)" class="dropdown-item" routerLink="/" data-toggle="modal" data-target="#logoutModal">
+          <a *ngIf="!isGuest(user)" class="dropdown-item" routerLink="/" data-toggle="modal" data-target="#signOutModal">
             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
             Sign Out
           </a>
