--- a/frontend/src/app/sidebar/sidebar.component.html
+++ b/frontend/src/app/sidebar/sidebar.component.html
@@ -5,13 +5,14 @@
       <i class="fas fa-arrow-left"></i>
   </div>
   -->
+  <hr class="my-4"/>
 
   <a routerLink="/" class="sidebar-link">
       <span class="fas fa-home"></span>
       <span>Home</span>
   </a>
 
-  <a routerLink="/" class="sidebar-link">
+  <a routerLink="/search" class="sidebar-link">
     <span class="far fa-thumbs-up"></span>
     <span>Popular</span>
   </a>
