--- a/frontend/src/app/sidebar/sidebar.component.scss
+++ b/frontend/src/app/sidebar/sidebar.component.scss
@@ -2,10 +2,11 @@
 
 #sidebar {
   @extend .rounded-right;
-  width: 200px;
+  @extend .p-2;
+  width: 11rem;
   position: fixed;
   top: 0;
-  left: -200px;
+  left: -11rem;
   height: 100vh;
   z-index: 9999;
   background: rgb(255, 255, 255);
