--- a/frontend/src/app/topbar/topbar.component.html
+++ b/frontend/src/app/topbar/topbar.component.html
@@ -83,7 +83,7 @@
       <!-- Nav Item - User Information -->
       <li class="nav-item dropdown no-arrow">
         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+          <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.displayName}}</span>
           <img *ngIf="isGuest(user)" class="img-profile rounded-circle" src="/assets/img/img60x60.jpg">
           <img *ngIf="!isGuest(user)" class="img-profile rounded-circle" src="{{userImgUrl}}" onError="this.src='/assets/img/img60x60.jpg';">
         </a>
@@ -93,6 +93,11 @@
             <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
             Profile
           </a>
+          <a class="dropdown-item" routerLink="/content">
+            <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+            Create Content
+          </a>
+          <!--
           <a class="dropdown-item" routerLink="/">
             <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
             Settings
@@ -101,6 +106,7 @@
             <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
             Activity Log
           </a>
+          -->
           <div class="dropdown-divider"></div>
           <a *ngIf="isGuest(user)" class="dropdown-item" routerLink="/signin">
             <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
