working on testcases

--- a/frontend/src/app/reputation/reputation.component.html
+++ b/frontend/src/app/reputation/reputation.component.html
@@ -1,5 +1,5 @@
 
-<div class="reputation">
+<div *ngIf="reputation" class="reputation">
 
   <ngb-rating *ngIf="isRated()" class="uniform" [rate]="getRated()" [readonly]="true">
     <ng-template let-fill="fill">
