--- a/frontend/src/app/review/review.component.html
+++ b/frontend/src/app/review/review.component.html
@@ -1,37 +1,39 @@
-<div class="review">
-  <textarea class="form-control" [(ngModel)]="review.comment" placeholder="Please type a title here."></textarea>
-  <div class="review-btns">
-    <div class="col-5">
-      <ngb-rating [(rate)]="review.reputing.rated">
-        <ng-template let-fill="fill">
-          <span class="rating-star" [class.rating-star-full]="fill === 100">&#9733;</span>
-        </ng-template>
-      </ngb-rating>
-    </div>
-    <div class="col-7">
-      <button type="button" (click)="onSave()" class="btn-basic">
-        <i class="far fa-save"></i><span> Save</span>
-      </button>
+<div *ngIf="content">
+  <div *ngIf="review" class="review">
+    <textarea class="form-control" [(ngModel)]="review.comment" placeholder="Please type a title here."></textarea>
+    <div class="review-btns">
+      <div class="col-5">
+        <ngb-rating [(rate)]="review.reputing.rated">
+          <ng-template let-fill="fill">
+            <span class="rating-star" [class.rating-star-full]="fill === 100">&#9733;</span>
+          </ng-template>
+        </ngb-rating>
+      </div>
+      <div class="col-7">
+        <button type="button" (click)="onSave()" class="btn-basic">
+          <i class="far fa-save"></i><span> Save</span>
+        </button>
+      </div>
     </div>
   </div>
-</div>
 
-<ul class="list-unstyled">
-  <li class="media" *ngFor="let review of reviews" >
-    <div class="user-ref">
-      <app-user-ref [userRefId]="review.authorId" [userRefName]="review.authorName"></app-user-ref>
-      <p class="date">{{review.cruTime.created.toLocalDate()}}</p>
-      <app-reputation [model]="model" [idCid]="review.idCid" [reputation]="review.reputation"></app-reputation>
-    </div>
-    <div class="media-body">
-      <p>{{review.authorName}}</p>
-      <ngb-rating [(rate)]="review.reputing.rated" readonly=true>
-        <ng-template let-fill="fill">
-          <span class="rating-star" [class.rating-star-full]="fill === 100">&#9733;</span>
-        </ng-template>
-      </ngb-rating>
-      <p>{{review.comment}}</p>
-    </div>
-  </li>
-</ul>
+  <ul class="list-unstyled">
+    <li class="media" *ngFor="let review of reviews" >
+      <div class="user-ref">
+        <app-user-ref [userRefId]="review.authorId" [userRefName]="review.authorName"></app-user-ref>
+        <p class="date">{{review.cruTime.created.toLocalDate()}}</p>
+        <app-reputation [model]="model" [idCid]="review.idCid" [reputation]="review.reputation"></app-reputation>
+      </div>
+      <div class="media-body">
+        <p>{{review.authorName}}</p>
+        <ngb-rating [(rate)]="review.reputing.rated" readonly=true>
+          <ng-template let-fill="fill">
+            <span class="rating-star" [class.rating-star-full]="fill === 100">&#9733;</span>
+          </ng-template>
+        </ngb-rating>
+        <p>{{review.comment}}</p>
+      </div>
+    </li>
+  </ul>
 <button type="button" (click)="getNextReview()" class="btn btn-primary btn-lg btn-block" [disabled]="!nextInfo">More</button>
+</div>
