--- a/frontend/src/app/topbar/topbar.component.html
+++ b/frontend/src/app/topbar/topbar.component.html
@@ -84,8 +84,8 @@
       <li class="nav-item dropdown no-arrow">
         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.displayName}}</span>
-          <img *ngIf="isGuest(user)" class="img-profile rounded-circle" src="/assets/img/img60x60.jpg">
-          <img *ngIf="!isGuest(user)" class="img-profile rounded-circle" src="{{userImgUrl}}" onError="this.src='/assets/img/img60x60.jpg';">
+          <img *ngIf="user.isGuest()" class="img-profile rounded-circle" src="/assets/img/img60x60.jpg">
+          <img *ngIf="!user.isGuest()" class="img-profile rounded-circle" src="{{userImgUrl}}" onError="this.src='/assets/img/img60x60.jpg';">
         </a>
         <!-- Dropdown - User Information -->
         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -108,21 +108,20 @@
           </a>
           -->
           <div class="dropdown-divider"></div>
-          <a *ngIf="isGuest(user)" class="dropdown-item" routerLink="/signin">
+          <a *ngIf="user.isGuest()" class="dropdown-item" routerLink="/signin">
             <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
             Sign In
           </a>
-          <a *ngIf="isGuest(user)" class="dropdown-item" routerLink="/signup">
+          <a *ngIf="user.isGuest()" class="dropdown-item" routerLink="/signup">
             <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
             Sign Up
           </a>
-          <a *ngIf="!isGuest(user)" class="dropdown-item" routerLink="/" data-toggle="modal" data-target="#signOutModal">
+          <a *ngIf="!user.isGuest()" class="dropdown-item" routerLink="/" data-toggle="modal" data-target="#signOutModal">
             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
             Sign Out
           </a>
         </div>
       </li>
-
 
     </ul>
   </nav>
